hphp/test/zend/bad/ext/sockets/tests/socket_listen-wrongparams.php
<?php
var_dump(socket_listen(null));
$socket = socket_create(AF_UNIX, SOCK_STREAM, 0); 
var_dump(socket_listen($socket));